# skillbasedcontrol-communication

./: .gitignore  README.md  pyproject.toml
docs/: overview_classdiagram.md  sbc_diagrams.md
examples/: e01_createAssetSkillsHandle.py  e02_readSkillsByAssetSkillsHandle.py  e03_executeSkillByAssetSkillsHandle.py
sbc_communication/: __init__.py  assetConnectionInfo.py  assetskillscommunication.py  assetskillscommunication_factory.py  assetskillshandle.py  skillexecutionhandler.py
sbc_communication/opcua/: __init__.py  assetskillscommunication_opcua.py  assetskillscommunication_opcua_beckhoff.py  assetskillscommunication_opcua_bundr.py  assetskillscommunication_opcua_python_asyncua.py  assetskillscommunication_opcua_siemens.py
sbc_communication/opcua/certificates/: __info__.txt
tests/: _connection_infos_for_tests.py  basetestclass_test_assetskillcommunictaion_opcua.py  test_assetskillcommunictaion_opcua_beckhoff.py  test_assetskillcommunictaion_opcua_bundr.py  test_assetskillcommunictaion_opcua_python_asyncua.py  test_assetskillcommunictaion_opcua_siemens.py  test_assetskillscommunication_factory.py  test_assetskillshandle.py  test_skillexecutionhandler.py
