[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "sbc_communication"
description='provide a high level class for communicating with skills (SkillBasedControlFramework) of assets by OPC-UA (ADS planned).'
dynamic  =["version"]
requires-python = ">=3.10"
readme = 'README.md'
license = {file = "LICENSE"}
dependencies= [
    'asyncua==1.1.*', 
    'sbc_statemachine @ git+https://gitlab.cc-asp.fraunhofer.de/cpps/skillbasedcontrolframework/python_skillstatemachine@1.0.x'
]

[tools.setuptools]
packages = ["sbc_communication"]

[tool.setuptools.package-data]
mypkg = ["*.der", "*.pem"]

[project.optional-dependencies]
docs=[  "sphinx",
        "sphinx-rtd-theme"]

[tool.setuptools-git-versioning]
enabled = true